--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <hr>
     <h2>Unidad I</h2>
     <ol>
-        <li><a href="/u1/01encabezados.html">Encabezados html</a></li>
+        <li><a href="u1/01encabezados.html">Encabezados html</a></li>
         <li></li>
         <li></li>
         <li></li>
